@@ -1,3 +1,4 @@
+2014-08-12 : Inbox date editing fixed for Windows.
 2014-08-12 : Link to a file in Summary now renders correctly. 
 2014-06-21 : Grades now removed from Gradebook when submission is deleted.
 2014-06-21 : PP cron now ignores files with no OR score when cron attempts to refresh scores.
